# ai-satelite

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: __init__.py  main.py
app/concepts/: __init__.py  baseline_starlink.py  body_mounted_solar.py  graphene_radiator.py  solar_heatsink.py
app/pages/: 01_satellite_designer.py  02_concept_explorer.py  03_orbital_viewer.py  04_w_per_kg_analyzer.py  05_structural_analysis.py  06_constellation_sim.py  __init__.py
examples/: verify_spacex_patent.py
src/: __init__.py
src/ai_payload/: __init__.py
src/constellation/: __init__.py
src/core/: __init__.py  constants.py
src/eda/: __init__.py
src/orbital/: __init__.py  keplerian.py
src/power/: __init__.py
src/structural/: __init__.py  materials.py
src/thermal/: __init__.py  grid_fin_radiator.py  heat_sources.py  stefan_boltzmann.py  view_factors.py
tests/: __init__.py  test_orbital.py  test_structural.py  test_thermal.py
